tests/NormalTests/paczka1/small_fuzzy/50538416.err
Error in line 2: TbKkXeW A359 47,8
Error in line 4: TbKkXeW A102 39,16
Error in line 3: TbKkXeW A872 64,9
Error in line 10: 9QPDW A872 28,6
